--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -10,32 +10,33 @@
         android:id="@+id/bConfirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="49dp"
         android:onClick="confirm"
         android:text="@string/button_confirm"
-        app:layout_constraintEnd_toEndOf="@+id/editTEmail3"
-        app:layout_constraintStart_toStartOf="@+id/editTEmail3"
-        app:layout_constraintTop_toBottomOf="@+id/editTEmail3" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTEmail3"
+        app:layout_constraintVertical_bias="0.18" />
 
     <EditText
         android:id="@+id/editTEmail3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="167dp"
+        android:layout_marginTop="100dp"
         android:ems="10"
         android:hint="@string/email_hint"
         android:inputType="textEmailAddress"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textVEmail" />
 
     <TextView
         android:id="@+id/textVEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="78dp"
+        android:layout_marginTop="32dp"
         android:text="@string/forgot_password_title"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
