--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -10,33 +10,32 @@
         android:id="@+id/bLogIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="100dp"
         android:onClick="logIn"
         android:text="@string/button_login"
-        app:layout_constraintEnd_toEndOf="@+id/bSignUp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTPass" />
 
     <Button
         android:id="@+id/bSignUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="33dp"
-        android:layout_marginEnd="77dp"
+        android:layout_marginTop="32dp"
         android:onClick="bSignUp"
         android:text="@string/button_signup"
-        app:layout_constraintEnd_toEndOf="@+id/editTPass"
-        app:layout_constraintStart_toStartOf="@+id/bFPass"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bLogIn" />
 
     <Button
         android:id="@+id/bFPass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="32dp"
         android:onClick="forgetPassword"
         android:text="@string/button_forgot_password"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bSignUp" />
 
@@ -44,23 +43,23 @@
         android:id="@+id/editTPass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="32dp"
         android:ems="10"
         android:hint="@string/password_hint"
         android:inputType="textPassword"
-        app:layout_constraintStart_toStartOf="@+id/editTEmail"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTEmail" />
 
     <EditText
         android:id="@+id/editTEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="78dp"
-        android:layout_marginTop="124dp"
+        android:layout_marginTop="100dp"
         android:ems="10"
         android:hint="@string/email_hint"
         android:inputType="textEmailAddress"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
