--- a/app/src/main/res/layout/activity_verify.xml
+++ b/app/src/main/res/layout/activity_verify.xml
@@ -10,33 +10,35 @@
         android:id="@+id/bVerify"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="123dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="122dp"
+        android:layout_marginBottom="32dp"
         android:onClick="verify"
         android:text="@string/button_send_vemail"
-        app:layout_constraintBottom_toBottomOf="@+id/bAlready"
+        app:layout_constraintBottom_toTopOf="@+id/bAlready"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tVerify" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tVerify" />
 
     <Button
         android:id="@+id/bAlready"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginBottom="252dp"
         android:onClick="already"
         android:text="@string/button_have_vemail"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tVerify"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="83dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="150dp"
         android:text="@string/verify_email_title"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="You need to verify your email" />
