--- a/app/src/main/res/layout/fragment_log_out.xml
+++ b/app/src/main/res/layout/fragment_log_out.xml
@@ -11,10 +11,10 @@
         android:id="@+id/bLogOut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="140dp"
-        android:layout_marginTop="312dp"
         android:onClick="bLogOut"
         android:text="@string/log_out"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
