--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -9,57 +9,57 @@
 
     <Button
         android:id="@+id/bLogInOut"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="81dp"
         android:onClick="login"
         android:text="@string/button_login"
-        app:layout_constraintStart_toEndOf="@+id/button2"
+        app:layout_constraintBottom_toTopOf="@+id/buttonMaps"
+        app:layout_constraintEnd_toEndOf="@+id/button2"
+        app:layout_constraintStart_toStartOf="@+id/button2"
         app:layout_constraintTop_toBottomOf="@+id/button2" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="32dp"
         android:onClick="lang_change"
         android:text="@string/lan_change"
+        app:layout_constraintBottom_toTopOf="@+id/bLogInOut"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonMaps"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="67dp"
         android:onClick="toMaps"
         android:text="@string/maps"
         app:layout_constraintBottom_toTopOf="@+id/buttonVoice"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/bLogInOut"
+        app:layout_constraintStart_toStartOf="@+id/bLogInOut"
+        app:layout_constraintTop_toBottomOf="@+id/bLogInOut" />
 
     <Button
         android:id="@+id/buttonVoice"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginBottom="227dp"
         android:onClick="recognize"
         android:text="@string/voice"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/buttonSpeech"
+        app:layout_constraintEnd_toEndOf="@+id/buttonMaps"
+        app:layout_constraintStart_toStartOf="@+id/buttonMaps"
+        app:layout_constraintTop_toBottomOf="@+id/buttonMaps" />
 
     <Button
         android:id="@+id/buttonSpeech"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginBottom="123dp"
         android:onClick="speech"
         android:text="@string/id_speech"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/buttonVoice"
+        app:layout_constraintStart_toStartOf="@+id/buttonVoice"
+        app:layout_constraintTop_toBottomOf="@+id/buttonVoice" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
