--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -7,37 +7,34 @@
     tools:context=".LogInActivity">
 
     <Button
-        android:id="@+id/bLogIn"
+        android:id="@+id/btnLogIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:onClick="logIn"
         android:text="@string/button_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTPass" />
 
     <Button
-        android:id="@+id/bSignUp"
+        android:id="@+id/btnSignUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:onClick="bSignUp"
         android:text="@string/button_signup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bLogIn" />
+        app:layout_constraintTop_toBottomOf="@+id/btnLogIn" />
 
     <Button
-        android:id="@+id/bFPass"
+        android:id="@+id/btnFPass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:onClick="forgetPassword"
         android:text="@string/button_forgot_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bSignUp" />
+        app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />
 
     <EditText
         android:id="@+id/editTPass"
