--- a/app/src/main/res/layout/activity_verify.xml
+++ b/app/src/main/res/layout/activity_verify.xml
@@ -7,25 +7,23 @@
     tools:context=".VerifyActivity">
 
     <Button
-        android:id="@+id/bVerify"
+        android:id="@+id/btnVerify"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
-        android:onClick="verify"
         android:text="@string/button_send_vemail"
-        app:layout_constraintBottom_toTopOf="@+id/bAlready"
+        app:layout_constraintBottom_toTopOf="@+id/btnAlready"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tVerify" />
 
     <Button
-        android:id="@+id/bAlready"
+        android:id="@+id/btnAlready"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
         android:layout_marginBottom="252dp"
-        android:onClick="already"
         android:text="@string/button_have_vemail"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
