--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,58 +8,53 @@
     tools:context=".LoginFragment">
 
     <Button
-        android:id="@+id/bLogInOut"
+        android:id="@+id/btnLogInOut"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:onClick="login"
         android:text="@string/button_login"
-        app:layout_constraintBottom_toTopOf="@+id/buttonMaps"
-        app:layout_constraintEnd_toEndOf="@+id/button2"
-        app:layout_constraintStart_toStartOf="@+id/button2"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintBottom_toTopOf="@+id/btnMaps"
+        app:layout_constraintEnd_toEndOf="@+id/btnLangChange"
+        app:layout_constraintStart_toStartOf="@+id/btnLangChange"
+        app:layout_constraintTop_toBottomOf="@+id/btnLangChange" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnLangChange"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:onClick="lang_change"
         android:text="@string/lan_change"
-        app:layout_constraintBottom_toTopOf="@+id/bLogInOut"
+        app:layout_constraintBottom_toTopOf="@+id/btnLogInOut"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/buttonMaps"
+        android:id="@+id/btnMaps"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:onClick="toMaps"
         android:text="@string/maps"
-        app:layout_constraintBottom_toTopOf="@+id/buttonVoice"
-        app:layout_constraintEnd_toEndOf="@+id/bLogInOut"
-        app:layout_constraintStart_toStartOf="@+id/bLogInOut"
-        app:layout_constraintTop_toBottomOf="@+id/bLogInOut" />
+        app:layout_constraintBottom_toTopOf="@+id/btnVoice"
+        app:layout_constraintEnd_toEndOf="@+id/btnLogInOut"
+        app:layout_constraintStart_toStartOf="@+id/btnLogInOut"
+        app:layout_constraintTop_toBottomOf="@+id/btnLogInOut" />
 
     <Button
-        android:id="@+id/buttonVoice"
+        android:id="@+id/btnVoice"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:onClick="recognize"
         android:text="@string/voice"
-        app:layout_constraintBottom_toTopOf="@+id/buttonSpeech"
-        app:layout_constraintEnd_toEndOf="@+id/buttonMaps"
-        app:layout_constraintStart_toStartOf="@+id/buttonMaps"
-        app:layout_constraintTop_toBottomOf="@+id/buttonMaps" />
+        app:layout_constraintBottom_toTopOf="@+id/btnSpeech"
+        app:layout_constraintEnd_toEndOf="@+id/btnMaps"
+        app:layout_constraintStart_toStartOf="@+id/btnMaps"
+        app:layout_constraintTop_toBottomOf="@+id/btnMaps" />
 
     <Button
-        android:id="@+id/buttonSpeech"
+        android:id="@+id/btnSpeech"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:onClick="speech"
         android:text="@string/id_speech"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/buttonVoice"
-        app:layout_constraintStart_toStartOf="@+id/buttonVoice"
-        app:layout_constraintTop_toBottomOf="@+id/buttonVoice" />
+        app:layout_constraintEnd_toEndOf="@+id/btnVoice"
+        app:layout_constraintStart_toStartOf="@+id/btnVoice"
+        app:layout_constraintTop_toBottomOf="@+id/btnVoice" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
