--- a/app/src/main/res/layout/recyclerview_row_cart.xml
+++ b/app/src/main/res/layout/recyclerview_row_cart.xml
@@ -11,18 +11,17 @@
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="26dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="32dp"
         android:text="@string/remove_from_cart"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/category" />
 
     <TextView
         android:id="@+id/category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="32dp"
         android:text="placeholder"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/priceTextView"
@@ -32,8 +31,8 @@
         android:id="@+id/priceTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:text="placeholder"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,12 +42,10 @@
         android:id="@+id/textViewQ"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="37dp"
-        android:layout_marginEnd="93dp"
-        android:layout_marginBottom="37dp"
         android:text="0"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/category"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/category" />
+        app:layout_constraintStart_toEndOf="@+id/category"
+        app:layout_constraintTop_toTopOf="@+id/category" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
